removed reporter factory; dependency injection works better for this feature

--- a/lib/specdown/templates/color_summary.erb
+++ b/lib/specdown/templates/color_summary.erb
@@ -1,15 +1,15 @@
 
 
 ---------------------------------------------------------------------------
-<%= format_stat("markdown", @report_summary.num_markdowns).bold   %>
-<%= format_stat("test",     @report_summary.num_tests).bold       %>
-<%= format_stat("success",  @report_summary.num_successes).green  %>
-<%= format_stat("failure",  @report_summary.num_failures).red     %>
+<%= Term::ANSIColor.bold format_stat("markdown", @report_summary.num_markdowns)   %>
+<%= Term::ANSIColor.bold format_stat("test",     @report_summary.num_tests)       %>
+<%= Term::ANSIColor.green format_stat("success",  @report_summary.num_successes)  %>
+<%= Term::ANSIColor.red format_stat("failure",  @report_summary.num_failures)     %>
 ---------------------------------------------------------------------------
 
 <% runners.map(&:stats).each do |stat| %>
 <% stat.exceptions.each do |e| %>
-<%= "In #{e.test_filename}".blue.bold %>: <%= "#<#{e.exception_class}>:".red.bold%> <%=e.exception_message%>
-<%= e.exception_backtrace.join("\n").red %>
+<%= Term::ANSIColor.bold(Term::ANSIColor.blue "In #{e.test_filename}") %>: <%= Term::ANSIColor.bold(Term::ANSIColor.red "#<#{e.exception_class}>:") %> <%=e.exception_message%>
+<%= Term::ANSIColor.red e.exception_backtrace.join("\n") %>
 <% end %>
 <% end %>
