--- a/lib/specdown/templates/color_summary.erb
+++ b/lib/specdown/templates/color_summary.erb
@@ -6,6 +6,8 @@
 <%= Term::ANSIColor.blue format_stat("pending",  @report_summary.num_pendings)    %>
 <%= Term::ANSIColor.green format_stat("success", @report_summary.num_successes)   %>
 <%= Term::ANSIColor.red format_stat("failure",   @report_summary.num_failures)    %>
+<%= Term::ANSIColor.yellow(@report_summary.num_undefined.to_s + " undefined")     %>
+
 ---------------------------------------------------------------------------
 
 <% runners.map(&:stats).each do |stat| %>
@@ -13,4 +15,15 @@
 <%= Term::ANSIColor.bold(Term::ANSIColor.blue "In #{e.test_filename}") %>: <%= Term::ANSIColor.bold(Term::ANSIColor.red "#<#{e.exception_class}>:") %> <%=e.exception_message%>
 <%= Term::ANSIColor.red e.exception_backtrace.join("\n") %>
 <% end %>
+<% end %>
+<% if @report_summary.num_undefined > 0 %>
+<%= Term::ANSIColor.yellow 'Now add the following implicit spec definition to a file suffixed with ".specdown":'%>
+<% end %>
+<% runners.collect(&:stats).collect(&:undefined_implicits).flatten.each do |implicit_key| %>
+<%= Term::ANSIColor.yellow implicit_key %>
+<%= Term::ANSIColor.yellow("-" * implicit_key.length) %>
+
+<%= Term::ANSIColor.yellow "    pending # replace this with the code you wish you had" %>
+
+
 <% end %>
