--- a/lib/specdown/templates/summary.erb
+++ b/lib/specdown/templates/summary.erb
@@ -3,13 +3,17 @@
 ---------------------------------------------------------------------------
 <%= format_stat("markdown", @report_summary.num_markdowns)    %>
 <%= format_stat("test",     @report_summary.num_tests)        %>
-<%= format_stat("pending",  @report_summary.num_pendings)     %>
+<%= format_stat("pending test",  @report_summary.num_pendings)%>
 <%= format_stat("success",  @report_summary.num_successes)    %>
 <%= format_stat("failure",  @report_summary.num_failures)     %>
 <%= @report_summary.num_undefined %> undefined
 ---------------------------------------------------------------------------
 <% runners.map(&:stats).each do |stat| %>
 <% stat.exceptions.each do |e| %>
+In <%=e.test_filename%>: <#<%=e.exception_class%>> <%=e.exception_message%>
+<%= e.exception_backtrace.join "\n" %>
+<% end %>
+<% stat.pending_exceptions.each do |e| %>
 In <%=e.test_filename%>: <#<%=e.exception_class%>> <%=e.exception_message%>
 <%= e.exception_backtrace.join "\n" %>
 <% end %>
